--- a/viewer.html
+++ b/viewer.html
@@ -13,6 +13,7 @@
 
     <link rel='stylesheet' type='text/css' href='css/turtle_commands.css' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.1.1/math.js"></script>
+    <script type='text/javascript' src='js/constants.js'></script>
     <script type='text/javascript' src='js/lib/Three.js'></script>
     <script type='text/javascript' src='js/lib/Stats.js'></script>
     <script type='text/javascript' src='js/lib/THREEx.WindowResize.js'></script>
@@ -86,31 +87,45 @@
       for (;;) {
         let digit = Math.floor(remainder * b /  y)
         remainder = (remainder * b) % y
-        console.log(digit)
         yield digit
       }
     }
 
-    $('#turtleCommandArea button.execim').click(async function() {
-      const n = math.divide(1, math.complex(2, 3))
-      // const imStr = n.im.toString().split(".")[1]
-      // const realStr = n.re.toString().split(".")[1]
-      let iters = 10000;
-      const base = 16
-      const realIter = calculateNDecimalsOfRational(1, 2, base)
-      const imIter = calculateNDecimalsOfRational(3, 12, base)
-      // const realStr = '1234'
-      // const imStr = '4671'
-      // Calculate and "match" periodicity...
-      // for (let i = 0; i < iters; i++) {
-      for(;;){
-        turtle.turnDown((imIter.next().value + 1)/ base * 360)
-        turtle.turnRight((realIter.next().value + 1)/ base * 180)
-        // turtle.turnRight((imIter.next().val + 1)/ base * 360)
-        turtle.forward(10)
-        await new Promise((res, rej) => setTimeout(res, 4))
+    function* base10ListToGen(list, base=10) {
+      let i = 0;
+      let l = list.length
+      let r = 0;
+      for (;;) {
+        const decimal = parseFloat(`0.${list[i] + r}`)
+        const digit = Math.floor(decimal * base)
+        r =  (decimal * base - Math.floor(decimal * base)) * 10
+        yield digit
+        i = (i + 1) % l
       }
-    });
+    }
+
+    async function drawXY(xIter, yIter, base=10) {
+      const n = math.divide(1, math.complex(2, 3))
+      let iters = 10000;
+      for(;;){
+        turtle.turnDown((xIter.next().value)/ base * 360)
+        turtle.turnRight((yIter.next().value)/ base * 360)
+        turtle.forward(10)
+        await new Promise((res, rej) => setTimeout(res, 1))
+      }
+    }
+
+    async function drawPiE () {
+      
+    }
+
+    window.onload = () => {
+      const base = 16
+      const xIter = base10ListToGen(piDigits, 16)
+      // const xIter = calculateNDecimalsOfRational(3, 21, base)
+      const yIter = base10ListToGen(eDigits, 16) //calculateNDecimalsOfRational(0, 121, base)
+      drawXY(xIter, yIter, base)
+    }
   </script>
 
   <script>
