--- a/viewer.html
+++ b/viewer.html
@@ -13,6 +13,7 @@
 
     <link rel='stylesheet' type='text/css' href='css/turtle_commands.css' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.1.1/math.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script> 
     <script type='text/javascript' src='js/constants.js'></script>
     <script type='text/javascript' src='js/lib/Three.js'></script>
     <script type='text/javascript' src='js/lib/Stats.js'></script>
@@ -23,6 +24,7 @@
     <script type='text/javascript' src='js/SphericalPoint.js'></script>
     <script type='text/javascript' src='js/MouseCamera.js'></script>
     <script type='text/javascript' src='js/Turtle.js'></script>
+    
 
   </head>
   <body>
@@ -96,6 +98,8 @@
       let l = list.length
       let r = 0;
       for (;;) {
+        if (i === 0)
+          console.log("STARTING FROM 0")
         const decimal = parseFloat(`0.${list[i] + r}`)
         const digit = Math.floor(decimal * base)
         r =  (decimal * base - Math.floor(decimal * base)) * 10
@@ -133,7 +137,6 @@
     $(document).ready (function () {
 
       mc = setup();
-      mc.addGrid ();
       var statToggle = setupStats();
       setupGUI (mc, statToggle);
       animate ();
@@ -162,13 +165,11 @@
       gui.add(statToggle, 'test').name ('Toggle StatView');
       gui.add(mc, 'theta').min(-360).max(720).step(1).listen().onChange(mc.update);
       gui.add(mc, 'phi').min(0).max(180).step(1).listen().onChange(mc.update);
-      gui.add(mc, 'radius').min(400).max(8000).step(1).listen().onChange(mc.update);
+      gui.add(mc, 'radius').min(400).max(16000).step(1).listen().onChange(mc.update);
       gui.add(mc, 'rotationEnabled').name('rotate').listen();
       gui.add(mc, 'rotationSpeed').min(0.1).max(3).step(0.1).listen();
-      gui.add(mc, 'toggleTargetSphere').name('Toggle Target Sphere');
-      gui.add(mc, 'toggleGrid').name('Toggle Grid');
-      gui.add(mc, 'topView').name('Top View');
-      gui.add(mc, 'mainView').name('Main View');
+      // gui.add(mc, 'topView').name('Top View');
+      // gui.add(mc, 'mainView').name('Main View');
     }
 
     function addCube (scene) {
